crates/plotnik-tests/tests/02-parser/recovery_validation/negated_field_in_alternation.txt
Q = [
  (pair)
  -key
]
------------------ DIAGNOSTICS -------------------
error: negated fields cannot appear directly in alternations
 --> query.ptk:3:3
  |
3 |   -key
  |   ^^^^
  |
help: negate the field inside a node alternative: `[(a -field) (b)]`
